fix slider alignment

--- a/wp-content/themes/zephyr/src/styles/views/global.scss
+++ b/wp-content/themes/zephyr/src/styles/views/global.scss
@@ -187,5 +187,9 @@
     @include mq-min($bp-md) {
       transform: translate3d(35.75%, 0 , 0);
     }
+
+    @include mq-min($bp-lg) {
+      transform: translate3d(50%, 0 , 0);
+    }
   }
 }
